we moved away from the jacob library, changed the absolute path in the WordTemplateProcessor, and updated the build.gradle for the ability to create .jar(./gradlew shadowJar) and .exe(./gradlew packageApp)